--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "nextjs-routes": "^1.0.8",
     "node-fetch": "^3.2.9",
     "papaparse": "^5.3.2",
-    "path-to-regexp": "^6.2.1",
+    "path-to-regexp": "^6.3.0",
     "phoenix": "^1.6.15",
     "pino-http": "^8.2.1",
     "pino-pretty": "^9.1.1",
@@ -161,5 +161,20 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
+  },
+  "resolutions": {
+    "@grpc/grpc-js": "1.9.15",
+    "axios": "1.7.4",
+    "braces": "3.0.3",
+    "cookie": "0.7.0",
+    "dompurify": "3.1.3",
+    "elliptic": "6.6.0",
+    "json5": "2.2.3",
+    "micromatch": "4.0.8",
+    "rollup": "3.29.5",
+    "secp256k1": "5.0.1",
+    "undici": "5.28.4",
+    "vite": "4.5.5",
+    "ws": "8.17.1"
   }
 }
